syntax = "proto3";

option go_package = "github.com/muhreeowki/price-fetcher/proto";

service PriceFetcher {
  rpc FetchPrice (PriceRequest) returns (PriceResponse) {}
  }

message PriceRequest {
  string ticker = 1;
}

message PriceResponse {
  optional double price = 1;
  string ticker = 2;
}
